--- a/Glamboyant/Views/HairService/Index.cshtml
+++ b/Glamboyant/Views/HairService/Index.cshtml
@@ -52,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id = item.HairServiceID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.HairServiceID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.HairServiceID })
             </td>
         </tr>
     }
