--- a/Glamboyant/Views/Review/Create.cshtml
+++ b/Glamboyant/Views/Review/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Glamboyant.Models.AppointmentModels.AppointmentCreate
+﻿@model Glamboyant.Models.ReviewModels.ReviewCreate
 
 @{
     ViewBag.Title = "Create";
@@ -12,31 +12,29 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AppointmentCreate</h4>
+        <h4>ReviewCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.AppointmentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentDate, new { htmlAttributes = new { @class = "form-control" } })
-                
-)
-                @Html.ValidationMessageFor(model => model.AppointmentDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HairServiceID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("HairServiceID", (IEnumerable<SelectListItem>)ViewBag.HairServices, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.HairServiceID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserID", (IEnumerable<SelectListItem>)ViewBag.Users, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
             </div>
         </div>
