--- a/Glamboyant/Views/Shared/_Layout.cshtml
+++ b/Glamboyant/Views/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li style="color:hotpink !important;">@Html.ActionLink("Home", "Index", "Home", new { Style = "color:hotpink;"})</li>
-                    <li style="color: hotpink !important;">@Html.ActionLink("Services", "Index", "HairService", new { Style = "color:hotpink;" })</li>
-                    <li style="color: hotpink !important;">@Html.ActionLink("Book Now", "Index", "Appointment", new { Style = "color:hotpink;" })</li>
-                    <li style="color:hotpink !important;">@Html.ActionLink("About", "About", "Home", new { Style = "color:hotpink;" })</li>
-                    <li style="color:hotpink !important;">@Html.ActionLink("Contact", "Contact", "Home", new { Style = "color:hotpink;" })</li>
+                    <li style="color:hotpink !important;">@Html.ActionLink("Home", "Index", "Home", null, new { @style = "color:hotpink;" })</li>
+                    <li style="color: hotpink !important;">@Html.ActionLink("Services", "Index", "HairService", null, new { @style = "color:hotpink;" })</li>
+                    <li style="color: hotpink !important;">@Html.ActionLink("Book Now", "Index", "Appointment", null, new { @style = "color:hotpink;" })</li>
+                    <li style="color:hotpink !important;">@Html.ActionLink("About", "About", "Home", null, new { @style = "color:hotpink;" })</li>
+                    <li style="color:hotpink !important;">@Html.ActionLink("Contact", "Contact", "Home", null, new { @style = "color:hotpink;" })</li>
                 </ul>
-                @Html.Partial("_LoginPartial", new { Style = "color:hotpink;" })
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
