beginning service styling

--- a/Glamboyant/Views/HairService/Index.cshtml
+++ b/Glamboyant/Views/HairService/Index.cshtml
@@ -4,7 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Services</h2>
+<h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">SERVICES</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
