--- a/Glamboyant/Views/HairService/Edit.cshtml
+++ b/Glamboyant/Views/HairService/Edit.cshtml
@@ -4,7 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+    <h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">
+        EDIT SERVICE
+    </h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +19,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>HairServiceEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.HairServiceID)
@@ -43,14 +49,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" style="background-color: hotpink !important; color: white !important;" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
 </div>
 
 @section Scripts {
