--- a/Glamboyant/Views/Home/About.cshtml
+++ b/Glamboyant/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+<div class="text-center">
+    <h4>Glamboyant is someone who is an exotrovert who embodies the qualities of style, fabulousness, and intelligent wit.</h4>
+
+    <p>Whether in your home, office, or hotel; Glamboyant is commited to bringing the best beauty services straight to your door.</p>
+</div>
+
+<div class="text-center">
+    <img src="~/Assets/GlamboyantLogo.png" style="height:200px; width: 300px;" />
+</div>
