--- a/Glamboyant/Views/Shared/_Layout.cshtml
+++ b/Glamboyant/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="~/Views/Home/Index.cshtml"><img src="~/Assets/GlamboyantLogo.png" class="logo" style="height:80px; width:150px;" /></a>
+                <a href="@Url.Action("Index", "Home")"><img src="~/Assets/GlamboyantLogo.png" class="logo" style="height:80px; width:150px;" /></a>
                @* @Html.ActionLink("Glamboyant", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
