--- a/Glamboyant/Views/Appointment/Delete.cshtml
+++ b/Glamboyant/Views/Appointment/Delete.cshtml
@@ -4,20 +4,24 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">DELETE APPOINTMENT</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="text-align:center;">Are you sure you want to delete this appointment?</h3>
 <div>
-    <h4>AppointmentDetail</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.AppointmentID)
-        </dt>
 
-        <dd>
+        @Html.HiddenFor(model => model.AppointmentID)
+
+
+        @*<dd>
             @Html.DisplayFor(model => model.AppointmentID)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.AppointmentDate)
@@ -25,6 +29,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.AppointmentDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AppointmentTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AppointmentTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Address)
         </dd>
 
         <dt>
@@ -49,8 +69,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" style="background-color: hotpink !important; color: white !important;" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
         </div>
     }
 </div>
