--- a/Glamboyant/Views/Appointment/Details.cshtml
+++ b/Glamboyant/Views/Appointment/Details.cshtml
@@ -4,19 +4,22 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">APPOINTMENT DETAILS</h2>
 
 <div>
-    <h4>AppointmentDetail</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.AppointmentID)
-        </dt>
 
-        <dd>
+            @Html.HiddenFor(model => model.AppointmentID)
+
+        @*<dd>
             @Html.DisplayFor(model => model.AppointmentID)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.AppointmentDate)
@@ -24,6 +27,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.AppointmentDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AppointmentTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AppointmentTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Address)
         </dd>
 
         <dt>
@@ -45,6 +64,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.AppointmentID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.AppointmentID }, new { style = "color:hotpink" }) |
+    @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
 </p>
