--- a/Glamboyant/Views/HairService/Delete.cshtml
+++ b/Glamboyant/Views/HairService/Delete.cshtml
@@ -4,20 +4,26 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+    <h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">
+        DELETE SERVICE
+    </h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="text-align:center;">Are you sure you want to delete this service?</h3>
 <div>
-    <h4>HairServiceDetail</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HairServiceID)
-        </dt>
 
-        <dd>
+            @Html.HiddenFor(model => model.HairServiceID)
+
+
+        @*<dd>
             @Html.DisplayFor(model => model.HairServiceID)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -49,8 +55,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" style="background-color: hotpink !important; color: white !important;" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
         </div>
     }
 </div>
