--- a/Glamboyant/Views/HairService/Details.cshtml
+++ b/Glamboyant/Views/HairService/Details.cshtml
@@ -4,19 +4,25 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+    <h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">
+        SERVICE DETAILS
+    </h2>
 
 <div>
-    <h4>HairServiceDetail</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HairServiceID)
-        </dt>
 
-        <dd>
+            @Html.HiddenFor(model => model.HairServiceID)
+
+
+        @*<dd>
             @Html.DisplayFor(model => model.HairServiceID)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -45,6 +51,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.HairServiceID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.HairServiceID }, new { style = "color:hotpink" }) |
+    @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
 </p>
