--- a/Glamboyant/Views/Review/Details.cshtml
+++ b/Glamboyant/Views/Review/Details.cshtml
@@ -4,18 +4,32 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+    <h2 style="        margin-top: 60px;
+        text-align: center;
+        color: hotpink;
+        font-family: 'Megrim', cursive;
+        font-weight:600;
+">
+        REVIEW DETAILS
+    </h2>
 
 <div>
-    <h4>ReviewDetail</h4>
     <hr />
     <dl class="dl-horizontal">
+
+        @Html.HiddenFor(model => model.ReviewID)
+
+
+        @*<dd>
+            @Html.DisplayFor(model => model.ReviewID)
+        </dd>*@
+
         <dt>
-            @Html.DisplayNameFor(model => model.ReviewID)
+            @Html.DisplayNameFor(model => model.Rating)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ReviewID)
+            @Html.DisplayFor(model => model.Rating)
         </dd>
 
         <dt>
@@ -24,14 +38,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Text)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rating)
         </dd>
 
         <dt>
@@ -45,6 +51,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.ReviewID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.ReviewID }, new { style = "color:hotpink" }) |
+    @Html.ActionLink("Back to List", "Index", null, new { style = "color:hotpink" })
 </p>
