--- a/Glamboyant/Views/Review/Create.cshtml
+++ b/Glamboyant/Views/Review/Create.cshtml
@@ -12,8 +12,9 @@
         CREATE REVIEW
     </h2>
 
+@*maybe make these modals?*@
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Review", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -33,6 +34,14 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+        </div>
+    </div> 
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);" />
+            @*@Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })*@
         </div>
     </div>
 
