--- a/Glamboyant/Views/Review/Index.cshtml
+++ b/Glamboyant/Views/Review/Index.cshtml
@@ -25,28 +25,34 @@
             @Html.DisplayNameFor(model => model.Text)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.UserID)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Text)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.ReviewID }, new { style = "color:hotpink" }) |
-            @Html.ActionLink("Details", "Details", new {  id=item.ReviewID }, new { style = "color:hotpink" }) |
-            @Html.ActionLink("Delete", "Delete", new {  id=item.ReviewID }, new { style = "color:hotpink" })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Rating)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Text)
+    </td>
+    <td>
+        <img src="/Review/RetrieveImage/@item.ReviewID" alt="" height=250 width=200 />
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.UserID)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.ReviewID }, new { style = "color:hotpink" }) |
+        @Html.ActionLink("Details", "Details", new { id = item.ReviewID }, new { style = "color:hotpink" }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.ReviewID }, new { style = "color:hotpink" })
+    </td>
+</tr>
 }
 
 </table>
