full crud photo upload

--- a/Glamboyant/Views/Appointment/Index.cshtml
+++ b/Glamboyant/Views/Appointment/Index.cshtml
@@ -9,11 +9,23 @@
         color: hotpink;
         font-family: 'Megrim', cursive;
         font-weight:600;
-">APPOINTMENTS</h2>
+">
+    APPOINTMENTS
+</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", null, new { style = "color:hotpink" })
 </p>
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
+}
 <table class="table">
     <tr>
         <th>
@@ -34,30 +46,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    @Html.HiddenFor(modelItem => item.AppointmentID)
-    <td>
-        @Html.DisplayFor(modelItem => item.AppointmentDate)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AppointmentTime)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Address)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.HairServiceID)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.UserID)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.AppointmentID }, new { style = "color:hotpink" }) |
-        @Html.ActionLink("Details", "Details", new { id = item.AppointmentID }, new { style = "color:hotpink" }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.AppointmentID }, new { style = "color:hotpink" })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            @Html.HiddenFor(modelItem => item.AppointmentID)
+            <td>
+                @Html.DisplayFor(modelItem => item.AppointmentDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AppointmentTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.HairServiceID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserID)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.AppointmentID }, new { style = "color:hotpink" }) |
+                @Html.ActionLink("Details", "Details", new { id = item.AppointmentID }, new { style = "color:hotpink" }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.AppointmentID }, new { style = "color:hotpink" })
+            </td>
+        </tr>
+    }
 
 </table>
