--- a/Glamboyant/Views/Review/Details.cshtml
+++ b/Glamboyant/Views/Review/Details.cshtml
@@ -41,6 +41,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            <img src="/Review/RetrieveImage/@Model.ReviewID" alt="" height=250 width=200 />
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.UserID)
         </dt>
 
