--- a/Glamboyant/Views/Review/Edit.cshtml
+++ b/Glamboyant/Views/Review/Edit.cshtml
@@ -14,12 +14,11 @@
     </h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Review", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>ReviewEdit</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ReviewID)
@@ -37,6 +36,14 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);" />
+            @*@Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })*@
         </div>
     </div>
 
